--- a/src/style/style.css
+++ b/src/style/style.css
@@ -25,8 +25,10 @@
     color: white;
 }
 
-.menu_image {
-    max-width: fit-content;
+.menu_image,
+.about_image {
+    max-width: 100%;
+    height: auto;
 }
 
 .about_title,
